--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         bottom: -920px;
         max-width: 1400px;
         z-index: 10;
-        opacity: 30%
+        opacity: 15%
       }
 
       .roger-image {
@@ -125,10 +125,11 @@
       
       .roger-text {
   position: absolute;
-  left: 150px;
-  bottom: -1400px;
+  
+  bottom: -1430px;
   max-width: 600px;
-  line-height: 2;
+  line-height: 50px;
+
   
 }
     </style>
@@ -194,9 +195,7 @@
    "You want my treasure?  You can have it!  I left everything I gathered together in one place!  Now you just have to find it!" </p>
 
       <p>
-        These words lured men to the Grand Line.  In pursuit of dreams greater than they've ever dared to imagine! </p>
-
-      <p> This is the time known as the 'Great Pirate Era'!
+        These words lured men to the Grand Line.  In pursuit of dreams greater than they've ever dared to imagine! This is the time known as the 'Great Pirate Era'!
     </p>
     </div>
 
