--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       .boat-image {
         position: absolute;
-        right: 70px;
+        right: 100px;
         bottom: -150px;
         max-width: 400px;
         z-index: 10;
@@ -107,7 +107,7 @@
 
       .sword-image {
         position: absolute;
-        right: 20px;
+        right: 50px;
         bottom: -920px;
         max-width: 1400px;
         z-index: 10;
@@ -116,8 +116,8 @@
 
       .roger-image {
         position: absolute;
-        right: 70px;
-        bottom: -1400px;
+        right: 100px;
+        bottom: -1500px;
         max-width: 400px;
         z-index: 15;
 
@@ -126,9 +126,9 @@
       .roger-text {
   position: absolute;
   
-  bottom: -1430px;
+  bottom: -1500px;
   max-width: 600px;
-  line-height: 50px;
+  line-height: 40px;
 
   
 }
@@ -189,12 +189,12 @@
   
     <p>
       Wealth, fame, power...  Gold Roger, the King of the Pirates, obtained this and everything else the world had to offer and his dying words drove countless souls to the seas.
-    </p>
+    </p> <br>
 
       <p>  
-   "You want my treasure?  You can have it!  I left everything I gathered together in one place!  Now you just have to find it!" </p>
+   "You want my treasure?  You can have it!  I left everything I gathered together in one place!  Now you just have to find it!" </p><br>
 
-      <p>
+      <p><br>
         These words lured men to the Grand Line.  In pursuit of dreams greater than they've ever dared to imagine! This is the time known as the 'Great Pirate Era'!
     </p>
     </div>
