--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
         z-index: 15;
       }
 
-      .roger-text {
-        position: absolute;
-        left: 200px;
-       
-        bottom: -1500px;
-        max-width: 600px;
-        line-height: 40px;
-      }
+     .roger-text {
+  position: absolute;
+  margin-left: 120px; 
+  left: 0;
+  bottom: -1500px;
+  max-width: 600px;
+  line-height: 40px;
+}
     </style>
 
   </head>
