--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
      .roger-text {
   position: absolute;
-  margin-left: 120px; 
-  left: 0;
+  left: 50%; /* Start at center */
+  transform: translateX(-700px); /* Then shift left by half its position */
   bottom: -1500px;
   max-width: 600px;
   line-height: 40px;
