--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en-CA">
+<html lang="en-CA"> 
 
   <head>
 
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
 
     <title>Final Project</title>
 
@@ -42,7 +46,7 @@
       }
 
       .logo {
-        max-width: 150px;
+        max-width: 180px;
         margin-bottom: 20px;
         margin-top: 40px
       }
@@ -57,6 +61,7 @@
         font-optical-sizing: auto;
         font-weight: 400;
         font-style: normal;
+        
       }
 
       nav a {
@@ -85,19 +90,21 @@
 
       .banner p {
         color: white;
-        font-family: "Playpen Sans", cursive;
+        font-family: "Annie Use Your Telescope", cursive;
         font-optical-sizing: auto;
-        font-weight: 400;
+        font-weight: 500;
         font-style: normal;
         line-height: 60px;
+        font-size: 20px;
       }
 
 
       p {
-        font-family: "Playpen Sans", cursive;
+        font-family: "Annie Use Your Telescope", cursive;
         font-optical-sizing: auto;
-        font-weight: 400;
+        font-weight: 500;
         font-style: normal;
+         font-size: 20px;
 
       }
 
