--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
   </head>
 
-
+ 
   <body>
 
 
@@ -291,11 +291,11 @@
 
       <div>
         <nav>
-          <a href="#crew">THE CREW</a>
-          <a href="#luffy">LUFFY</a>
-          <a href="#devil-fruits">DEVIL FRUITS</a>
-        </nav>
-
+          <a href="https://hafsa5511.github.io/crew/">THE CREW</a>
+          <a href="https://hafsa5511.github.io/luffy/">LUFFY</a>
+          <a href="https://hafsa5511.github.io/fruits/">DEVIL FRUITS</a>
+        </nav> 
+ 
 
       </div>
 
