--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+
+<!--Hafsa Abbasi
+Student ID: 21132621 -->
+
 <!DOCTYPE html>
 
 <html lang="en-CA">
@@ -418,3 +422,15 @@
 
   </body>
 </html>
+
+<!-- All animations in Javascript were made using Claud Ai
+ 
+Fade animation for all pages was made by asking Ai: "I want a fade scroll animation to the whole thing, like an elegant fade in when you scroll down the page for everything."
+
+Bobbing Skull animation was created by asking: "write a Gentle Floating/Bobbing animation for Skull logo"
+
+Glow animation was created by asking: "Create a cool glow effect to the luffy joyboy image"
+
+All HTML was done by me. 
+
+-->
